refactor: rename GetTextInputError to ValidateInput and update usages